[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyppl_flowchart"
version = "0.0.3"
description = "Generating flowchart for PyPPL"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pyppl_flowchart"
repository = "https://github.com/pwwang/pyppl_flowchart"
[[tool.poetry.packages]]
include = "pyppl_flowchart"

[tool.poetry.dependencies]
python = "^3.6"
pyppl = "^2.0.0"
panflute = "^1.0.0"
graphviz = "^0.11"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
